fixed list scrollbar

--- a/css/dynamic-dashboard.css
+++ b/css/dynamic-dashboard.css
@@ -331,9 +331,12 @@
 					display: flex;
 					justify-content: start;
 					align-items: center;
-					width: calc(100% - 48px);
-					margin: 0 24px;
+					width: 100%;
+					padding: 8px 24px;
 					height: 32px;
+					position: sticky;
+					top: -1px;
+					background-color: var(--primary-color);
 
 					p {
 						text-align: left;
@@ -364,6 +367,7 @@
 						flex-direction: row;
 						width: 100%;
 						height: 54px;
+						min-height: 54px;
 						padding: 0 24px;
 
 						.img-name{
@@ -409,6 +413,10 @@
 							&:hover {
 								background-color: #00000029;
 							}
+						}
+
+						&:first-of-type{
+							margin-top: 16px;
 						}
 					}
 
